:sparkles: 포스트 상세페이지에 포스트 내용 렌더링

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,9 +19,19 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
-    }
+      "@/*": ["./*"],
+      "contentlayer/generated": ["./.contentlayer/generated"],
+      "contentlayer/generated/*": ["./.contentlayer/generated/*"]
+    },
+    "baseUrl": ".",
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "tailwind.config.js"],
+  "include": [
+    "next-env.d.ts", 
+    "**/*.ts", 
+    "**/*.tsx", 
+    ".next/types/**/*.ts", 
+    "tailwind.config.js",
+    ".contentlayer/generated",
+  ],
   "exclude": ["node_modules"]
 }
