--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev & contentlayer dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "contentlayer": "^0.3.4",
+    "date-fns": "^3.3.1",
     "next": "14.0.4",
+    "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
