--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/typography": "^0.5.10",
     "contentlayer": "^0.3.4",
     "date-fns": "^3.3.1",
+    "framer-motion": "^11.0.3",
     "next": "14.0.4",
     "next-contentlayer": "^0.3.4",
     "next-themes": "^0.2.1",
