--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@giscus/react": "^2.4.0",
     "contentlayer": "^0.3.4",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.3",
