--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "rehype-pretty-code": "0.9.11",
-    "shiki": "0.14.7"
+    "shiki": "0.14.7",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
